# sim_test

./: README.md  demo_.sh  demo_script.sh
client_side/: CMakeLists.txt  package.xml
client_side/src/: bucket_thresh_tool.cpp  client.cpp  client_gate.cpp  client_red_bucket.cpp  client_red_flare.cpp  client_yellow_flare.cpp  gate_thresh_tool.cpp  test_sim.cpp
simulator_sauvc_test/: CMakeLists.txt  package.xml
simulator_sauvc_test/config/: bucket_ip.conf  gate_green_ip.conf  gate_ip.conf  gate_red_ip.conf  red_flare_ip.conf
simulator_sauvc_test/include/simulator_sauvc_test/: image_processor.h  simulator_sauvc_test.h
simulator_sauvc_test/src/: image_processor.cpp  main.cpp  simulator_sauvc_test.cpp
simulator_sauvc_test/srv/: Coordinates.srv
