<?xml version="1.0"?>
<package format="2">
  <name>simulator_sauvc_test</name>
  <version>0.0.0</version>
  <description>The simulator_sauvc_test package</description>

  <maintainer email="aatishrana495@gmail.com">Aatish Rana</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hammerhead</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pid_controller</build_depend>
  <build_depend>vectornav</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>hammerhead</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>pid_controller</build_export_depend>
  <build_export_depend>vectornav</build_export_depend>

  <exec_depend>hammerhead</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vectornav</exec_depend>
  <exec_depend>pid_controller</exec_depend>


  <export>


  </export>
</package>
